tests/ui/macros/issue-6596-1.stderr
error: expected expression, found `$`
  --> $DIR/issue-6596-1.rs:3:9
   |
LL | / macro_rules! e {
LL | |     ($inp:ident) => (
LL | |         $nonexistent
   | |         ^^^^^^^^^^^^ expected expression
LL | |
LL | |     );
LL | | }
   | |_- in this expansion of `e!`
...
LL |       e!(foo);
   |       ------- in this macro invocation

error: aborting due to previous error

